<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/general_background"
    tools:context=".GameActivity" >
    
        <RelativeLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
	        android:keepScreenOn="true" >

  			<fragment 
			 	android:id="@+id/map"
			  	android:layout_width="match_parent"
			  	android:layout_height="match_parent"
			  	class="com.google.android.gms.maps.SupportMapFragment"
				map:cameraBearing="0"
				map:cameraTargetLat="-33.796923"
				map:cameraTargetLng="150.922433"
				map:cameraTilt="0"
				map:cameraZoom="13"
				map:mapType="normal"
				map:uiCompass="false"
				map:uiRotateGestures="false"
				map:uiScrollGestures="true"
				map:uiTiltGestures="true"
				map:uiZoomControls="true"
				map:uiZoomGestures="true"/>
  			
  			<RelativeLayout 
	            android:id="@+id/pre_game"
	            android:background="@color/black_overlay"
    	        android:layout_width="fill_parent"
        	    android:layout_height="fill_parent"	>
  			
  			<TextView
    	        android:id="@+id/big_countdown"
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_centerInParent="true"
   	    		android:layout_marginBottom="10dp"
	            android:gravity="center"
	            android:text="@string/dummy_time"
	            android:textSize="48sp"
        	    style="@style/bigText" />
        	    
  			<TextView
    	        android:id="@+id/not_started"
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_centerHorizontal="true"
				android:layout_above="@id/big_countdown"
	            android:fontFamily="sans-serif-light"
	            android:gravity="center"
	            android:text="@string/not_started_message"
	            android:textSize="24sp"
        	    style="@style/bigText" />
  						
  			</RelativeLayout>
  			
  			<RelativeLayout 
	            android:id="@+id/control_panel"
    	        android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:layout_alignLeft="@id/main_content"
        	    android:layout_alignTop="@id/main_content"	>
        	    
				<ImageButton 
				    android:id="@+id/logoutButton"
	        		android:layout_width="wrap_content"
    	    		android:layout_height="wrap_content"
    	    		android:contentDescription="@string/action_logout"
    	    		android:layout_marginTop="10dp"
    	    		android:layout_marginLeft="10dp"
    	    		style="@style/controlStyle"
        			android:src="@drawable/exit"/>
				
				<ImageButton 
				    android:id="@+id/statusButton"
	        		android:layout_width="wrap_content"
    	    		android:layout_height="wrap_content"
    	    		android:contentDescription="@string/action_status"
    	    		android:layout_marginTop="10dp"
    	    		android:layout_marginLeft="10dp"
    	    		android:layout_toRightOf="@id/logoutButton"
    	    		style="@style/controlStyle"
        			android:src="@drawable/status"/>
				
				<ToggleButton 
				    android:id="@+id/playerButton"
	        		android:layout_width="@dimen/control_width"
    	    		android:layout_height="@dimen/control_width"
    	    		android:contentDescription="@string/action_players"
    	    		android:layout_marginTop="10dp"
    	    		android:layout_marginLeft="10dp"
    	    		android:layout_toRightOf="@id/statusButton"
    	    		android:onClick="togglePlayers" 
    	    		android:textOn=""
    	    		android:textOff=""
    	    		style="@style/toggleStyle" />
								
				<ImageButton 
				    android:id="@+id/chatButton"
	        		android:layout_width="wrap_content"
    	    		android:layout_height="wrap_content"
    	    		android:contentDescription="@string/action_chat"
    	    		android:layout_marginTop="10dp"
    	    		android:layout_marginLeft="10dp"
    	    		android:layout_toRightOf="@id/playerButton"
    	    		style="@style/controlStyle"
        			android:src="@drawable/chat"/>
				
				<ImageButton 
				    android:id="@+id/helpButton"
	        		android:layout_width="wrap_content"
    	    		android:layout_height="wrap_content"
    	    		android:contentDescription="@string/action_help"
    	    		android:layout_marginTop="10dp"
    	    		android:layout_marginLeft="10dp"
    	    		android:layout_toRightOf="@id/chatButton"
    	    		style="@style/controlStyle"
        			android:src="@drawable/help"/>
				
							</RelativeLayout>
			
  			<TextView
    	        android:id="@+id/countdown"
        	    android:layout_width="@dimen/countdown_width"
            	android:layout_height="wrap_content"
            	android:layout_alignParentBottom="true"
            	android:layout_centerHorizontal="true"
	            android:fontFamily="sans-serif-light"
   	    		android:layout_marginBottom="10dp"
	            style="@style/InfoField"
	            android:gravity="center"
	            android:text="@string/dummy_time"
        	    android:textAppearance="?android:attr/textAppearanceMedium" />
  			
       </RelativeLayout>
       
        <!-- Popup message -->
       
       <RelativeLayout
	        android:id="@+id/popup_message_canvas"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
	        android:layout_gravity="center"
    	    android:gravity="center_horizontal"
        	android:orientation="vertical"
	        android:padding="5dp"
    	    android:layout_margin="5dp"
	        android:background="@color/light_background"
    	    android:visibility="gone" >
  			
	        <ProgressBar
	            android:id="@+id/message_progress"
    	        style="?android:attr/progressBarStyleLarge"
        	    android:layout_width="wrap_content"
	           	android:layout_height="wrap_content" />

	        <TextView
    	        android:id="@+id/popup_message"
        	    android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_toRightOf="@id/message_progress"
            	android:layout_centerVertical="true"
	            android:fontFamily="sans-serif-light"
    	        android:text="@string/wait_message"
        	    android:textAppearance="?android:attr/textAppearanceMedium" />
           
		</RelativeLayout>

        <!-- Claim dialog -->

    <RelativeLayout
        android:id="@+id/claim_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_margin="5dp"
        style="@style/Dialog"
        android:visibility="gone" >

        <TextView
            android:id="@+id/clue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/DialogTitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <EditText 
            android:id="@+id/answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/code_hint"
            android:imeActionLabel="@string/action_claim"
            style="@style/InputField"
            android:layout_below="@id/clue" />
            
        <RelativeLayout
		    android:id="@+id/buttons"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_centerInParent="true"
        	android:layout_below="@id/answer" >
        <Button
            android:id="@+id/claim_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_claim"
            android:layout_marginRight="8dp"
            style="@style/ButtonStyle"
             />
            
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:layout_marginLeft="8dp"
            android:layout_toRightOf="@id/claim_button" />
        </RelativeLayout>
        </RelativeLayout>
        
    <!-- Chat display -->
    
<LinearLayout  
	android:id="@+id/main_message"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">
 
    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:orientation="horizontal" >

    	<ImageButton 
		    android:id="@+id/exit_chat_button"
       		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:contentDescription="@string/action_logout"
    		android:layout_margin="10dp"
    		style="@style/controlStyle"
   			android:src="@drawable/exit"/>
    
        <TextView
            android:id="@+id/chatTitle"
            android:gravity="center"
            android:layout_width="0dip"
			android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/chat_title"
            android:textSize="24sp" 
		    android:paddingRight="28dp"
            />

	</LinearLayout>
    	
    <EditText 	android:id="@+id/messageHistory"
        		android:layout_width="match_parent"
        		android:layout_height="0dip"
        		android:clickable="true"	
				android:inputType="none"
        		android:editable="false"
        		android:maxLines="250"
        		android:gravity="bottom"
        		android:layout_weight="1"
        	    android:scrollbars="vertical"
        	    android:scrollbarSize="10dp"
        	    style="@style/InfoField"
        	    /> 
        
    <LinearLayout android:id="@+id/bottom_bar"
        		  android:orientation="horizontal"
    			  android:layout_width="match_parent"
    			  android:layout_height="wrap_content"
        		  android:background="@color/light_background"
    			  >
		
			<EditText 	android:id="@+id/message"
			 			android:layout_width="0dip"
		        		android:layout_height="wrap_content"
		        		android:includeFontPadding="true"
		        		android:lines="2"
		        		android:gravity="top"
		        		android:layout_weight="1"
		        	    style="@style/InputField"
		      			/>
		      			 		  
			<ImageButton 
				    android:id="@+id/send_button"
	        		android:layout_width="wrap_content"
    	    		android:layout_height="wrap_content"
    	    		android:layout_gravity="center_vertical"
    	    		android:contentDescription="@string/action_send"
    	    		style="@style/controlStyle"
        			android:src="@drawable/send"/>
			
	</LinearLayout>

</LinearLayout>
        
   <!-- Logout display -->

    <LinearLayout
        android:id="@+id/logout_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@color/light_background"
        android:visibility="visible" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/logout_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/logout_progress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
</FrameLayout>